# cryptocoin

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: address.cc  address.h  big_num.h  block.cc  block.h  block_builder.cc  block_builder.h  block_verifier.cc  block_verifier.h  data_value.cc  data_value.h  hash_utils.cc  hash_utils.h  key.cc  key.h  merkle_tree.cc  merkle_tree.h  transaction.cc  transaction.h
test/: data_value_test.cc  test.cc
